syntax = "proto3";

package boomerang;

option java_package = "io.boomerang.proto";
option java_multiple_files = true;

// Envelope for all communication over raw TCP.
// All requests after AuthHandshake MUST include a session_id.
message BoomerangEnvelope {
    string session_id = 1;            // Unique identifier for the client's session
    oneof payload {
        AuthHandshake auth_handshake = 2;
        AuthResponse auth_response = 3;
        Task registration_request = 4;
        RegistrationResponse registration_response = 5;
        CancellationRequest cancellation_request = 6;
        CancellationResponse cancellation_response = 7;
        SessionRefreshRequest session_refresh = 8;
        SessionRefreshResponse session_refresh_response = 9;
        ClientRegistrationRequest client_registration = 10;
        ClientRegistrationResponse client_registration_response = 11;
        ClientDeregistrationRequest client_deregistration = 12;
        ClientDeregistrationResponse client_deregistration_response = 13;
    }
}

// Handshake establishes the session and its configuration.
// Used for the initial authentication and to negotiate session-wide policies.
message AuthHandshake {
    string client_id = 1;             // The unique identifier for the client
    string password = 2;              // The plain-text password for authentication
}

// Client registration adds a new client with their default policies.
// Usually performed by an admin.
message ClientRegistrationRequest {
    string client_id = 1;
    string password = 2;
    bool is_admin = 3;
    CallbackConfig callback = 4;
    RetryPolicy retry = 5;
    DLQPolicy dlq = 6;
}

message ClientRegistrationResponse {
    Status status = 1;
    string error_message = 2;
}

message ClientDeregistrationRequest {
    string client_id = 1;
}

message ClientDeregistrationResponse {
    Status status = 1;
    string error_message = 2;
}

// Response to an AuthHandshake request.
message AuthResponse {
    string session_id = 1;            // The server-assigned session UUID if successful
    Status status = 2;                // The status of the authentication attempt
    string error_message = 3;         // Descriptive error if status is not OK
    uint64 expires_at_ms = 4;         // Expiry time in milliseconds (Unix epoch)
}

// Represents a task to be scheduled for future execution.
message Task {
    bytes payload = 1;                // Opaque data to be delivered to the callback endpoint
    uint64 delay_ms = 2;              // Relative delay from registration in milliseconds
    uint64 repeat_interval_ms = 3;    // 0 means no repetition, otherwise the interval for repeated execution
}

message CallbackConfig {
    enum Protocol {
        TCP = 0;
        GRPC = 1;
        HTTP = 2;
        UDP = 3;
    }
    Protocol protocol = 1;
    string endpoint = 2;
}

message RetryPolicy {
    enum BackoffStrategy {
        FIXED = 0;
        EXPONENTIAL = 1;
    }
    uint32 max_attempts = 1;
    BackoffStrategy strategy = 2;
    uint64 interval_ms = 3;           // Fixed interval OR initial exponential interval
    uint64 max_interval_ms = 4;       // Maximum interval cap for exponential backoff
}

message DLQPolicy {
    string destination = 1;           // Target identifier/endpoint for tasks that exceed max retries
}

message RegistrationResponse {
    string task_id = 1;               // Server-generated UUID
    Status status = 2;
    uint64 scheduled_time_ms = 3;     // Absolute epoch for the first execution
    string error_message = 4;
}

message CancellationRequest {
    string task_id = 1;
}

message CancellationResponse {
    Status status = 1;
    string error_message = 2;
}

message SessionRefreshRequest {}

message SessionRefreshResponse {
    Status status = 1;
    uint64 new_expires_at_ms = 2;
}

enum Status {
    OK = 0;
    ERROR = 1;
    UNAUTHORIZED = 2;
    INVALID_REQUEST = 3;
    SESSION_EXPIRED = 4;
}
